# upnp-scrobbler

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sample.env  scrobbler.env  wiim-scrobbler.py
.github/workflows/: docker-multi-arch.yml  sync-readme.yml
test/: regex_test.py  subsonic_test.py
upnp_scrobbler/: config.py  constants.py  event_name.py  player_state.py  scanner.py  scrobbler.py  song.py  subsonic.py  subsonic_configuration.py  util.py
